--- a/src/main/resources/templates/admin/restaurant/restaurantCreate.html
+++ b/src/main/resources/templates/admin/restaurant/restaurantCreate.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
-      class="light-style layout-menu-fixed layout-navbar-fixed"
+      class="light-style layout-menu-fixed"
       dir="ltr"
       data-theme="theme-default"
       data-assets-path="/admin/assets/"
@@ -31,28 +31,21 @@
 <div class="layout-wrapper layout-content-navbar">
     <div class="layout-container">
         <!-- Menu -->
-
         <aside id="layout-menu"
-               th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'restaurants,restaurants_create')}"
-               class="layout-menu menu-vertical menu bg-menu-theme"></aside>
+               th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'restaurants,restaurants_create')}"></aside>
         <!-- / Menu -->
 
         <!-- Layout container -->
         <div class="layout-page">
             <!-- Navbar -->
-
             <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Restaurant / Create')}"></nav>
-
-
             <!-- / Navbar -->
 
             <!-- Content wrapper -->
             <div class="content-wrapper">
                 <!-- Content -->
-
                 <div class="container-xxl flex-grow-1 container-p-y">
                     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Restaurant/</span> Create New</h4>
-
                     <!-- Basic Layout -->
                     <div class="row">
                         <div class="col-xl">
@@ -150,7 +143,6 @@
                                         <button type="submit" class="btn btn-primary">Send</button>
                                     </form>
                                 </div>
-
                             </div>
                         </div>
                     </div>
