Before merge Hung

--- a/src/main/resources/templates/client/fragments/elements/alert.html
+++ b/src/main/resources/templates/client/fragments/elements/alert.html
@@ -1,4 +1,4 @@
-<div th:fragment="success" class="alert alert-dismissible alert-success d-flex align-items-center" role="alert">
+<div th:fragment="success" class="alert alert-dismissible alert-success d-flex align-items-center m-2" role="alert">
     <span class="badge badge-center rounded-pill bg-success border-label-success p-3 me-2">
         <i class="fas fa-check"></i>
     </span>
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div th:fragment="error" class="alert alert-dismissible alert-danger d-flex align-items-center" role="alert">
+<div th:fragment="error" class="alert alert-dismissible alert-danger d-flex align-items-center m-2" role="alert">
     <span class="badge badge-center rounded-pill bg-danger border-label-danger p-3 me-2">
         <i class="fas fa-exclamation"></i>
     </span>
