--- a/src/main/resources/templates/admin/restaurant/restaurantCreate.html
+++ b/src/main/resources/templates/admin/restaurant/restaurantCreate.html
@@ -5,7 +5,7 @@
       class="light-style layout-menu-fixed"
       dir="ltr"
       data-theme="theme-default"
-      data-assets-path="/admin/assets/"
+      data-assets-path="../../admin/assets/"
       data-template="vertical-menu-template-free"
 >
 <head th:replace="~{admin/fragments/head :: heads(pageTitle='Create Restaurants')}">
@@ -150,7 +150,7 @@
                 <!-- / Content -->
 
                 <!-- Footer -->
-                <footer th:replace="admin/fragments/footer :: footer"></footer>
+                <footer th:replace="~{admin/fragments/footer :: footer}"></footer>
                 <!-- / Footer -->
 
                 <div class="content-backdrop fade"></div>
@@ -165,7 +165,7 @@
 </div>
 <!-- / Layout wrapper -->
 
-<div th:replace="admin/fragments/layout :: script"></div>
+<div th:replace="~{admin/fragments/layout :: script}"></div>
 
 </body>
 </html>
