--- a/src/main/resources/templates/admin/restaurant/restaurantList.html
+++ b/src/main/resources/templates/admin/restaurant/restaurantList.html
@@ -93,7 +93,7 @@
                 <!-- / Content -->
 
                 <!-- Footer -->
-                <footer th:replace="admin/fragments/footer :: footer"></footer>
+                <footer th:replace="~{admin/fragments/footer :: footer}"></footer>
                 <!-- / Footer -->
 
                 <div class="content-backdrop fade"></div>
@@ -108,7 +108,7 @@
 </div>
 <!-- / Layout wrapper -->
 
-<div th:replace="admin/fragments/layout :: script"></div>
+<div th:replace="~{admin/fragments/layout :: script}"></div>
 
 </body>
 </html>
