--- a/src/main/resources/templates/admin/fragments/menu.html
+++ b/src/main/resources/templates/admin/fragments/menu.html
@@ -17,6 +17,13 @@
             </a>
         </li>
 
+<!--        <li th:classappend="${value_menu.contains('site-setting')?'active':''}" class="menu-item">-->
+<!--            <a th:href="@{/admin/site-setting}" class="menu-link">-->
+<!--                <i class="menu-icon tf-icons bx bx-cog"></i>-->
+<!--                <span>Setting</span>-->
+<!--            </a>-->
+<!--        </li>-->
+
         <!-- Ví dụ xử lý menu Restaurants -->
         <li class="menu-header small text-uppercase">
             <span class="menu-header-text">Restaurants</span>
