before merge coupon

--- a/src/main/resources/templates/admin/fragments/head.html
+++ b/src/main/resources/templates/admin/fragments/head.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/admin/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="/admin/assets/css/demo.css" />
     <link rel="stylesheet" href="/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="/client/css/custom.css" />
     <script src="/admin/assets/vendor/js/helpers.js"></script>
     <script src="/admin/assets/js/config.js"></script>
 </head>
