update blog admin

--- a/src/main/resources/templates/admin/fragments/menu.html
+++ b/src/main/resources/templates/admin/fragments/menu.html
@@ -27,7 +27,7 @@
             </a>
             <ul class="menu-sub">
                 <li th:classappend="${value_menu.contains('blog_list')?'active':''}" class="menu-item">
-                    <a th:href="@{/admin/blogs/list}" class="menu-link">
+                    <a th:href="@{/admin/blogs}" class="menu-link">
                         <div>List blogs</div>
                     </a>
                 </li>
