--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -646,11 +646,11 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-5">
             <div class="col" th:each="blog : ${blogs}">
                 <div class="card h-100">
-                    <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}">
+                    <a th:href="@{${'/blog/detail/' + blog.getSlug()}}">
                         <img class="card-img-top img-fluid" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}" style="object-fit: cover; height: 200px;"/>
                     </a>
                     <div class="card-body">
-                        <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}">
+                        <a th:href="@{${'/blog/detail/' + blog.getSlug()}}">
                             <h5 class="card-title" th:text="${blog.getBlog_title()}" >Bài viết 1</h5>
                         </a>
                         <p class="card-text" th:text="${blog.getBlog_content()}">
